fix background of matrix in mathquill-textbox
selections in the mathquill-textbox that encompass
an entire math root block inside the textbox will
not match .mathquill-rendered-math .selection since
mathquill textboxes are not rendered math, so the
background of matrix filter stretched elements
in IE was not being changed to the highlight
background color.

--- a/mathquill.css
+++ b/mathquill.css
@@ -98,6 +98,7 @@
 .mathquill-rendered-math .selection .sqrt-stem,
 .mathquill-rendered-math .selection .paren,
 .mathquill-rendered-math .selection .array,
+.mathquill-editable .selection .matrixed,
 .mathquill-rendered-math .selection .matrixed,
 .mathquill-rendered-math .selection .block {
   background: #B4D5FE;
@@ -118,6 +119,7 @@
 .mathquill-rendered-math .selection.blur .sqrt-stem,
 .mathquill-rendered-math .selection.blur .paren,
 .mathquill-rendered-math .selection.blur .array,
+.mathquill-editable .selection.blur .matrixed,
 .mathquill-rendered-math .selection.blur .matrixed,
 .mathquill-rendered-math .selection.blur .block {
   background: #D4D4D4;
@@ -137,6 +139,7 @@
 .mathquill-rendered-math .selection .selection.blur .sqrt-stem,
 .mathquill-rendered-math .selection .selection.blur .paren,
 .mathquill-rendered-math .selection .selection.blur .array,
+.mathquill-editable .selection .selection.blur .matrixed,
 .mathquill-rendered-math .selection .selection.blur .matrixed,
 .mathquill-rendered-math .selection .selection.blur .block {
   background: #ABF;
@@ -154,6 +157,7 @@
 .mathquill-rendered-math .selection.blur .selection.blur .sqrt-stem,
 .mathquill-rendered-math .selection.blur .selection.blur .paren,
 .mathquill-rendered-math .selection.blur .selection.blur .array,
+.mathquill-editable .selection.blur .selection.blur .matrixed,
 .mathquill-rendered-math .selection.blur .selection.blur .matrixed,
 .mathquill-rendered-math .selection.blur .selection.blur .block {
   background: #AAA;
